--- a/Git API/index.html
+++ b/Git API/index.html
@@ -8,10 +8,29 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="search">
-    <input type="text" class="search_bar">
-    <button class="search_btn">Search</button>
-  </div>
+  <header>
+    <div class="head_section">
+      <h1 class="head_name">
+        GitHub User Finder
+      </h1>
+    </div>
+  </header>
+  <main>
+    <div class="search">
+      <input type="text" placeholder="Enter Keyword" class="search_bar">
+      <button class="search_btn">Search</button>
+    </div>
+    <!-- <div class="body_content">
+      <div class="profile">
+        <h1 class="user_name"> ${ data.name } </h1>
+        <img class="user_profile_pic" src="${ data.avatar_url }" alt="user_profile_pic">
+      </div>
+      <div class="follow">
+        <p class="followers"> Followers: ${ data.followers } </p>
+        <p class="following"> Following: ${ data.following } </p>
+      </div>
+    </div> -->
+  </main>
 
   <script src="script.js"></script>
 </body>
